<resources>
    <string name="app_name">TodoStock</string>
    <string name="seleccione_una_sucursal_para_ver_su_informaci_n">Seleccione una sucursal para ver su información</string>
    <string name="contacto_titulo">Contacto</string>
    <string name="contacto_descripcion">Comunicate con soporte ante cualquier consulta.</string>
    <string name="contacto_hint_nombre">Nombre</string>
    <string name="contacto_hint_email">Email</string>
    <string name="contacto_hint_mensaje">Mensaje</string>
    <string name="contacto_boton_enviar">ENVIAR</string>
    <string name="carga_producto_titulo">Carga de Producto</string>
    <string name="carga_producto_descripcion">Completá los datos del nuevo producto.</string>
    <string name="carga_producto_hint_nombre">Nombre</string>
    <string name="carga_producto_hint_descripcion">Descripción</string>
    <string name="carga_producto_hint_precio">Precio</string>
    <string name="carga_producto_hint_codigo">Código</string>
    <string name="carga_producto_boton_guardar">GUARDAR</string>
    <string name="contacto_hint_asunto">Asunto</string>
    <string name="contacto_boton_enviando">ENVIANDO…</string>
    <string name="contacto_error_nombre">El nombre es obligatorio</string>
    <string name="contacto_error_email">Ingresá un email válido</string>
    <string name="contacto_error_asunto">El asunto es obligatorio</string>
    <string name="contacto_error_mensaje">El mensaje es obligatorio</string>
    <string name="contacto_exito">Mensaje enviado. Soporte se va a comunicar a la brevedad.</string>
    <string name="contacto_error_generico">No se pudo enviar el mensaje. Intentá de nuevo más tarde.</string>
    <string name="contacto_error_conexion">No se pudo conectar con el servidor. Revisá tu conexión a Internet e intentá de nuevo.</string>
    <string name="contacto_mensaje_con_nombre">Nombre: %1$s\n\n%2$s</string>
    <string name="carga_producto_error_nombre">El nombre es obligatorio</string>
    <string name="carga_producto_error_descripcion">La descripción es obligatoria</string>
    <string name="carga_producto_error_precio">El precio es obligatorio</string>
    <string name="carga_producto_error_codigo">El código es obligatorio</string>
    <string name="carga_producto_ok">Producto válido, listo para guardar</string>
</resources>